Added Failed Test case

--- a/Data.properties
+++ b/Data.properties
@@ -118,9 +118,11 @@ InvestAmt=1000
 InvestBankName=abc
 InvestAccNum=123131231241243213
 InvestRmrk=Good
-InvestInslrDD=Elios Fund LLC
+InvestInslrDD=Test Client
 InvestCusNam=Travis Edwards
-InvestCusNam1=Test
+InvestCusNam1=test
+InvestCusNam2=test2
+
 InvestCusID=Elios 013
 InvestCusID1=Test
 InvestEmailId=thiru111@yopmail.com
@@ -143,7 +145,7 @@ CusListName=Allen Acker
 CustmrId=32132135486468
 CustmrName=Test
 CustInstDD=Elios Fund LLC
-CustPort=Elios 2023(Unassigned)
+CustPort=Elios 2023(Unassigned)(Unassigned)
 ModifCustPort=Elios 2023(Assigned)
 CustPTODate=15-03-2024
 CustCrdScre=123
@@ -182,7 +184,8 @@ CustEditProdEsc=12
 CustEditFrstYrProd=5
 
 
-ACHBankDD=Test Client
+ACHBankDD=Elios Fund LLC
+ACHBankDD1=Test Client
 ACHAccType=All
 ACHAccStus=All
 ACHSrch=Aishwarya
@@ -244,6 +247,7 @@ IPBankDDName=Elios Fund LLC
 IPBankDDName1=LA SOLAR
 IPPaySts=All
 IPSrchBox=Debra Meeks
+IPSrchBox12=Jim Billings
 IPSrchBox1=Samvel Samvelts
 IPPayDate=28
 IpChPyBkNm=(98653221) CGI TEST BANK
