--- a/Data.properties
+++ b/Data.properties
@@ -23,8 +23,6 @@ ViewUserEmailSrch=thirumaran1995@outlook.com
 VUDisMail1=0211thiru@gmail.com
 VUNewMailID=0211thiru@gmail.com
 ViewUserEmailSrch1=0211thiru@gmail.com
-VUNewMailID1=thirumaran1995@outlook.com
-VUNewPass=thirumaran@55
 VUOldpass=thirumaran@1995
 StatusBtnEbl=//*[@id="enabledRadio"]                  
 StatusBtnDbl=//*[@id="kt_content_container"]/form/div/div[2]/div[8]/div[2]/label/div/span/input
@@ -45,7 +43,7 @@ VUNewPass=thirumaran@55
 VUOldpass=thirumaran@1995
 ViewUserEmailSrch1=0211thiru@gmail.com
 ViewUserEmailSrch=thirumaran1995@outlook.com
-ViewUserSts=ENABLED
+ViewUserSts=ALL
 screenshotpath=C:\Users\thirumaran\git\PowerfundOneGit\PowerFundOneForGit\ScreenShot
 ExtraMail=sachsse86080@5v3s0l2.crankymonkey.info
 FilePath=C:\\Users\\thirumaran\\Desktop\\Screenshot 2024-03-06 105214.png
@@ -90,7 +88,7 @@ InstlrWebSite=abc@xyz.com
 InstlrInvCpy=321321313232
 CRMName=dmkasdl
 CRMUrl=abc.com
-InstSearchName=testers
+InstSearchName=test
 ModifiedInstName=testers
 TranDate=22-02-2024
 TranAmount=1000
@@ -118,7 +116,7 @@ InvestAmt=1000
 InvestBankName=abc
 InvestAccNum=123131231241243213
 InvestRmrk=Good
-InvestInslrDD=Test Client
+InvestInslrDD=Test
 InvestCusNam=Travis Edwards
 InvestCusNam1=test
 InvestCusNam2=test2
@@ -127,13 +125,13 @@ InvestCusID=Elios 013
 InvestCusID1=Test
 InvestEmailId=thiru111@yopmail.com
 InvestPasswrd=thirumaran@55
-InvestName1=Soundharya R
+InvestName1=testing
 InvestCusName=Sarah Dehenzel	
 InvestFileName=tester
 InvestTitle=Test title
 InvestNewsFeed=Test Feed
 
-CusSrchName=testers
+CusSrchName=tester
 CusStsAll=All
 CusStsEnbl=Enabled
 CusStsDsbl=Disabled
@@ -199,7 +197,7 @@ ACHPayDate=28
 ACHSkpPyReason=Test
 ACHSndToCusReq=Test
 ACHToMailId=thirumaran2812@outlook.com
-ACHInstlrDD=Test Client
+ACHInstlrDD=Test
 
 OSRepBankName=Test Client
 OSReportCusName=Vignesj
@@ -227,6 +225,7 @@ InvLogPaidCusName=Edward Boyd
 InvLogPendCusName=Catalina Maldonado
 InvLogPendCusName1=Carla Perea
 InvPayTyp=All
+InvPayTyp1=Pending
 InvLogFrmDat=14-08-2023
 InvLogToDat=22-03-2024
 InvLogVoidRemrk=Test
@@ -234,7 +233,7 @@ ILPayURLName=Test
 ILPayURLAcc=001200125
 ILPayURLRout=123456789
 
-ScheBankDD=LA SOLAR
+ScheBankDD=Test
 SchFromDate=11-11-2023
 
 NPUsrName=Test
@@ -280,7 +279,7 @@ CPCusEditNamAcc=Test
 CPCusEditBnkAcc=123456789
 CPCusEditBnkAccRout=987654321
 
-TktInstName=LA SOLAR
+TktInstName=Test
 TktCustName=Tommy Rosas
 TktViewBtnAddCmts=Test
 TktSndMailSubj=Test
