--- a/Data.properties
+++ b/Data.properties
@@ -2,7 +2,7 @@ EmailId=thirumaran0828@outlook.com
 Passwrd=thirumaran@55
 Invloginid=thirumara0828@outlook.com
 Invpassword=Thirumaran1995
-DsblMailId=disabledmail@yopmail.com
+DsblMailId=thirumaran1995@outlook.com
 DsblPswd=123123123123
 TwoFAEmail=thirumaran@yopmail.com
 TwoFAPass=123123123123
@@ -14,7 +14,7 @@ MailId=thiru@yopmail.com
 VUNewMailID=0211thiru@gmail.com
 Userrole=Testing
 VisibleTextPST=Product Support Team
-VisibleTextIU=Installer User
+VisibleTextIU=CGI User
 #LTFLoc="LTF"
 ManLoc=MAN
 #PreLoc="PRE"
@@ -285,3 +285,6 @@ TktViewBtnAddCmts=Test
 TktSndMailSubj=Test
 TktSndMailMsg=Testing
 TktClsTktDes=Test
+
+
+PortfolioName=testers
