--- a/Data.properties
+++ b/Data.properties
@@ -37,6 +37,7 @@ InvalidFilePath=C:\Users\thirumaran\Documents\Copy of CGI_TC's (6) (1) (1) (3).x
 IpAddres=192.168.1.36:81
 ModifiedBankName=NewAccount
 VUDisMail1=0211thiru@gmail.com
+VUUsrName=Disabled User
 VUNewMailID1=thirumaran1995@outlook.com
 VUNewMailID=0211thiru@gmail.com
 VUNewPass=thirumaran@55
@@ -99,7 +100,7 @@ StatusEnbl=ENABLED
 StatusDSbl=DISABLED
 BankSetupName=Testing
 ACHSkpPyRson=Test
-
+Amount=123
 InvestName=testers
 InvstrDD=ENABLED
 InvestCntry=CANADA
@@ -116,9 +117,9 @@ InvestAmt=1000
 InvestBankName=abc
 InvestAccNum=123131231241243213
 InvestRmrk=Good
-InvestInslrDD=Test
+InvestInslrDD=Testingg
 InvestCusNam=Travis Edwards
-InvestCusNam1=test
+InvestCusNam1=Testingg
 InvestCusNam2=test2
 
 InvestCusID=Elios 013
@@ -126,7 +127,7 @@ InvestCusID1=Test
 InvestEmailId=thiru111@yopmail.com
 InvestPasswrd=thirumaran@55
 InvestName1=testing
-InvestCusName=Sarah Dehenzel	
+InvestCusName=Tester
 InvestFileName=tester
 InvestTitle=Test title
 InvestNewsFeed=Test Feed
@@ -138,8 +139,8 @@ CusStsDsbl=Disabled
 CusSelInstlrName=Test
 CusGrpName=Testing
 
-CusBankNameDD=Elios Fund LLC
-CusListName=Allen Acker
+CusBankNameDD=Testingg
+CusListName=Test
 CustmrId=32132135486468
 CustmrName=Test
 CustInstDD=Elios Fund LLC
@@ -241,10 +242,10 @@ NPMailId=Test@yopmail.com
 NPUsrTyp=Test
 NPSignUsrID=vignesh.murugan@sankarasoftware.com
 
-IPBankDDName=Elios Fund LLC
+IPBankDDName=Testingg
 IPBankDDName1=LA SOLAR
 IPPaySts=All
-IPSrchBox=Debra Meeks
+IPSrchBox=Test
 IPSrchBox12=Jim Billings
 IPSrchBox1=Samvel Samvelts
 IPPayDate=28
