--- a/Data.properties
+++ b/Data.properties
@@ -154,6 +154,8 @@ CustTotYrs=2
 CustEscal=2.5
 CustTotConAmt=1312
 CustPhone=1231231231
+CustPhone1=123456789123456
+
 CustEmail=asdad@abc.com
 CustCntryDD=UNITED STATES
 CustStDD=Alaska
