--- a/Data.properties
+++ b/Data.properties
@@ -143,9 +143,9 @@ CusBankNameDD=Testingg
 CusListName=Test
 CustmrId=32132135486468
 CustmrName=Test
-CustInstDD=Elios Fund LLC
-CustPort=Elios 2023(Unassigned)(Unassigned)
-ModifCustPort=Elios 2023(Assigned)
+CustInstDD=Testingg
+CustPort=Test(Unassigned)
+ModifCustPort=testers(Unassigned)
 CustPTODate=15-03-2024
 CustCrdScre=123
 CustPrjSts=test
@@ -174,7 +174,7 @@ CustPanels=qweasd
 CustBatt=asdasd
 CustWattPerPan=123
 CustInvBrnd=Test
-CustAddPortName=Elios 2023(Unassigned)
+CustAddPortName=testers(Unassigned)
 CusNotes=TestNotes
 CustChoseToMerge=Test (32132135486468)
 CustMonltyAmt=123
@@ -202,7 +202,7 @@ ACHSndToCusReq=Test
 ACHToMailId=thirumaran2812@outlook.com
 ACHInstlrDD=Test
 
-OSRepBankName=Test Client
+OSRepBankName=Testingg
 OSReportCusName=Vignesj
 OSAddNtTxt=Test
 OSAddManDueMnth=21-03-2024
@@ -213,7 +213,8 @@ OSAddRcdPyTraDte=21-05-2024
 OSAddRcdPyTraDes=Test
 OSAddRcdPyAmt=2000
 OSAddRcdPayMode=Debit
-OSAddRcdPyBankName=(98653221) CGI TEST BANK
+#OSAddRcdPyBankName=(98653221) CGI TEST BANK
+OSAddRcdPyBankName=(1234568998) test
 OSAddRcdPyType=Invoice Pay
 
 TapeRptInsDD=Test Client
